--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,13 @@
 page-home {
+	
+	.big{
+		font-size:50px;
+		  width: 50px;
+		  margin: auto;
+		  display: block;
 
+	}
+	.text-center{
+		text-align:center;
+	}
 }
